--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VUE_APP_TITLE=盟码进销存--来源于科技，服务于科技
+VUE_APP_TITLE=山九进销存系统
 VUE_APP_API=http://erp.imema.top/api
 VUE_APP_REPO=https://gitee.com/imema/imerp-vue
 VUE_APP_I18N_LOCALE=zh-chs
