--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 # 开发环境
-VUE_APP_API=http://localhost:8081
+VUE_APP_API=http://localhost:8082
 
 # 页面 title 前缀
-VUE_APP_TITLE=盟码进销存--来源于科技，服务于科技
+VUE_APP_TITLE=物资进销存系统
 
 VUE_APP_BUILD_MODE=NOMOCK
